WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310507
[Android] Fix compilation errors when building with USE_GBM=OFF
https://bugs.webkit.org/show_bug.cgi?id=310507
Summary
[Android] Fix compilation errors when building with USE_GBM=OFF
lmm128
Reported
2026-03-22 20:29:17 PDT
Some recent changes fails to compile when building without GBM, which is the case with the Android port. Added #if's where applicable.
Attachments
Add attachment
proposed patch, testcase, etc.
lmm128
Comment 1
2026-03-22 20:32:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61137
EWS
Comment 2
2026-03-23 15:33:53 PDT
Committed
309789@main
(6da5abd6e2f2): <
https://commits.webkit.org/309789@main
> Reviewed commits have been landed. Closing PR #61137 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-23 15:34:13 PDT
<
rdar://problem/173189883
>
EWS
Comment 4
2026-05-13 10:01:01 PDT
Committed
305877.496@2.52_cherry_309789@main
(a4c01145f13b): <
https://commits.webkit.org/305877.496@2.52_cherry_309789@main
> Reviewed commits have been landed. Closing PR #64838 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug