Fix compiler errors when building with USE_GBM=OFF https://bugs.webkit.org/show_bug.cgi?id=310507

Reviewed by Adrian Perez de Castro.

Some recent changes introduced compilation errors when building without GBM, which is the case with the Android port.
Added #if's where applicable.

* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
(WebCore::VideoFrame::copyTo):
* Source/WebCore/platform/graphics/skia/SkiaPaintingEngine.cpp:
(WebCore::SkiaPaintingEngine::createAtlas):
* Tools/TestWebKitAPI/Tests/WebCore/glib/GraphicsContextGLTextureMapper.cpp:

Canonical link: https://commits.webkit.org/309789@main