Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp
@@ -587,7 +587,9 @@ void VideoFrame::copyTo(std::span<uint8_t> destination, VideoPixelFormat pixelFo
         inputSample = self.sample();
         break;
     case VideoFrameGStreamer::MemoryType::GL:
+#if USE(GBM)
     case VideoFrameGStreamer::MemoryType::DMABuf:
+#endif
         inputSample = self.downloadSample();
         break;
     }
